[package]
name = "rustdown"
version = "0.1.0"
edition = "2024"
description = "A browser-based Markdown playground powered by Rust and WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
comrak = { version = "0.36", default-features = false, features = ["syntect"] }

[profile.release]
opt-level = "s"
lto = true
